system/gatekeeper/templates/constraint-images-from-keppel.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gkimagesfromnonkeppel
spec:
  crd:
    spec:
      names:
        kind: GkImagesFromNonKeppel
      validation:
        openAPIV3Schema:
          properties: {}

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package imagesfromnonkeppel

        violation[{"msg": msg, "details": {"container": container_name, "image": image}}] {
          input.review.object.kind == "Pod"
          container := input.review.object.spec.containers[_]
          container_name := container.name
          image := container.image

          not startswith(image, "keppel.")
          msg := sprintf("container %q uses an image that is not from a Keppel registry: %s", [container_name, image])
        }
